--- a/hw/riscv/Kconfig
+++ b/hw/riscv/Kconfig
@@ -25,6 +25,8 @@ config MICROCHIP_PFSOC
 config TK1
     bool
     default y
+    select TK1_SPI
+    select SSI_M25P80
 
 config OPENTITAN
     bool
